--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@theme-toggles/react": "^4.1.0",
     "react": "^18.3.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "start": "react-scripts start",
